# Rustpair

./: Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/dedup/: mod.rs
src/format/: mod.rs
src/header/: mod.rs
src/io/: mod.rs
src/parse/: mod.rs
src/sort/: mod.rs
